# AetherLink

./: .gitignore  HANDOFF_CONTEXT.md  README.md  SECURITY_NOTES.md
docs/: ARCHITECTURE.md  BASELINE.md  DEMO_CHECKLIST.md  RESUME.md
host-rust/: Cargo.toml  config.sample.json
host-rust/src/: audio_capture.rs  clipboard.rs  clipboard_sync.rs  config.rs  delta_stream.rs  input.rs  main.rs  panic_hotkey.rs  protocol.rs  relay_client.rs  screen_capture.rs  server.rs  session_config.rs  trust_store.rs  ui.rs
relay-rust/: Cargo.toml
relay-rust/src/: main.rs
remote_client/: README.md  pubspec.yaml
remote_client/android/: gradle.properties
remote_client/android/app/: build.gradle.kts
remote_client/android/app/src/main/: AndroidManifest.xml
remote_client/android/app/src/main/kotlin/com/example/remote_client/: MainActivity.kt
remote_client/android/gradle/wrapper/: gradle-wrapper.properties
remote_client/ios/Runner/: Info.plist
remote_client/ios/Runner.xcodeproj/: project.pbxproj
remote_client/lib/: main.dart  remote_client.dart
remote_client/linux/: CMakeLists.txt
remote_client/linux/runner/: my_application.cc
remote_client/macos/Runner.xcodeproj/: project.pbxproj
remote_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
remote_client/macos/Runner/Configs/: AppInfo.xcconfig
remote_client/test/: widget_test.dart
remote_client/web/: index.html  manifest.json
remote_client/windows/: CMakeLists.txt
remote_client/windows/runner/: Runner.rc  main.cpp
scripts/: build_android_release.ps1  build_host_release.ps1
